@startuml
title Diagramme_de_Classe_Lampe

class Lampe{
    -nom : String
    -allumee : boolean

    +Lampe(String):
    +allumer(): boolean
    +eteindre(): boolean
    +toString(): String
}


class Telecommande{
    +Telecommande():
    +ajouterLampe(Lampe):
    +ajouterHifi(Hifi):
    +ajouterTele(Television):
    +activerLampe(int):
    +activerHifi(int):
    +activerTele(int):
    +desactiverLampe(int):
    +desactiverHifi(int):
    +desactiverTele(int):
    +activerTout():
    +toString(): String

}

class Hifi{
    -son: int

    +allumer():
    +eteindre():
    +toString(): String
}

class Television{
    -nom : String
    -allumee: boolean

    +Television(String):
    +allumer():
    +eteindre():
    +toString(): String
}

Telecommande-->"*" Hifi: -hifis
Telecommande-->"*" Lampe: -lampes
Telecommande-->"*" Television: -televisions

@enduml